--- a/index.html
+++ b/index.html
@@ -1,8 +1,3 @@
 
-<<<<<<< HEAD
 <p> This is a new repo</p>
-<p> This is a new feature (button)</p>
-=======
-<p> This is anew repo</p>
-<p> This is new feature</p>
->>>>>>> a76408293ab989d79605d8188282f67b0dea8fb3
+<p> This is a new feature</p>
